[package]
name = "rqmc"
version = "0.1.0"
authors = ["Howard Zhu <zhc_howard@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10"
structopt = "0.3"
log4rs = "1.0"
log = "0.4"

[dev-dependencies]
paste = "1.0"
